# videoWebApp

./: .env.example  .env.local.backup  CLAUDE.md  README.md  main.py  next.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt
components/: AISummary.js  ContentTypeFilter.js  DownloadModal.js  Pagination.js  TranscriptViewer.js  VideoCard.js  YouTubePlayer.js
pages/: index.js  results.js
pages/api/youtube/: search.js  summarize.js
pages/api/youtube/download/: [id].js  formats.js
pages/api/youtube/transcript/: [id].js
pages/api/youtube/video/: [id].js
pages/video/: [id].js
pages/watch/: [id].js
scripts/: summarize_transcript.py  summarize_transcript_with_agnos.py  test_agno.py
styles/: AISummary.module.css  ContentTypeFilter.module.css  Results.module.css  TranscriptViewer.module.css  VideoCard.module.css  VideoPage.module.css  Watch.module.css
utils/: aiSummarizer.js
